2009-02-17  Antti S. Lankila  <alankila@bel.fi>

        Sync against V31 beta.

        * filter.h: tune 6581 clipping distortion.

        * filer.cc: fix 6581/8580 use of uninitialized values at start.

        * sid.cc, voice.h, voice.cc, wave.h, wave.cc: Derive combined
          waveforms from measurements provided one year ago by kevtris.
          The combined waveforms are currently not tunable. The chosen chips
          produce somewhat untypical 6581R3 sound. 8580 may be correct enough,
          though.

        * wave6581*, wave8580*, samp2src.pl: Deleted.

2009-01-18  Antti S. Lankila  <alankila@bel.fi>

        Sync against V30 patch version. Filter updates described below.

        * filter.h: Add direct mixing between lp-hp. Reduce mixing factor
          to half to compensate.

        * filter.h, filter.cc: Repurpose tunable distortion_rate. It now sets
          the highpass level in relation to unfiltered output. -6 dB or 0.5 is
          approximately correct.

        * resid-fp/filter.h: Reduce the level difference between the lp, bp and hp.

        * filter.cc: Slightly more resonance for 8580 (Q in [0.7, 2.3]).

        * ../sid/sid.cc: Tweak distortion parameters.

        Features from V30-devel:

        * filter.h: add bit of lowpass inverted into bandpass in proportion to
          enabled resonance level. This seems to happen, but no idea why...

2008-12-05  Antti S. Lankila  <alankila@bel.fi>

	Sync against V27 patch version. Filter updates described below.

	* Reduce Q maximum to 2.2 or so. This may still be slightly too much,
	  but it's hard to say exactly...

	* Arrange for about 3 dB boost of lowpass output that is independent
	  of state variable mixing or other feedback. This seems to produce
	  the right kind of sounds for songs like AMJ's Blasphemy.

	* Assume that bp is slightly louder than bp (= more distorted).
	  This seems to help against very large number of songs which sport